@@ -322,7 +322,9 @@ class Importer:
                         indexconfig['mirror_whitelist'] = whitelist
                 user, index = stagename.split("/")
                 user = self.xom.model.get_user(user)
+                bases = indexconfig.pop('bases')
                 stage = user.create_stage(index, **indexconfig)
+                stage.modify(bases=bases)
                 stages.append(stage)
         del tree
 
@@ -432,7 +434,10 @@ class IndexTree:
         self.name2bases = {}
 
     def add(self, name, bases=None):
-        self.name2bases[name] = bases or []
+        bases = list(bases or [])
+        while name in bases:
+            bases.remove(name)
+        self.name2bases[name] = bases
         if not bases:
             self.name2children.setdefault(None, []).append(name)
         else:
